--- a/index.html
+++ b/index.html
@@ -177,6 +177,22 @@
             </div>
           </div>
         </div>
+        
+        
+          <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img alt="21LF21S" class="card-img-top" src="https://m.media-amazon.com/images/I/71vOyCvUMJL.jpg">
+            <div class="card-body">
+              <h5 class="card-title">21 Lessons for the 21st Century</h5>
+              <p class="card-text">In a world deluged by irrelevant information, clarity is power. Censorship
+                works not by blocking the flow of information, but rather by flooding people with disinformation
+                and distractions. 21 Lessons for the 21st Century cuts through these muddy waters and confronts
+                some of the most urgent questions on today’s global agenda..</p>
+              <a href="https://github.com/Darkrider007/" class="btn btn-outline-danger btn-sm">Contributed by -
+                Rohan</a>
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-4 mb-4">
           <div class="card">
