--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="card">
             <img alt="21LF21S" class="card-img-top" src="https://m.media-amazon.com/images/I/71vOyCvUMJL.jpg">
             <div class="card-body">
-              <h5 class="card-title">21 Lessons for the 21st Century</h5>
+              <a href="https://www.ynharari.com/book/21-lessons-book/"><h5 class="card-title">21 Lessons for the 21st Century</h5></a>
               <p class="card-text">In a world deluged by irrelevant information, clarity is power. Censorship
                 works not by blocking the flow of information, but rather by flooding people with disinformation
                 and distractions. 21 Lessons for the 21st Century cuts through these muddy waters and confronts
