--- a/index.html
+++ b/index.html
@@ -963,17 +963,9 @@
             <div class="card-body">
               <div>
                 <h5 class="card-title">Do It Today</h5>
-                <p class="card-text">DO IT TODAYAre you also tired of putting off your dreams until "tomorrow?" Guess what! 
-                  Tomorrow never comes. Am I right? I've procrastinated and putt off my desire to write a book for a decade. 
-                  I always came up with excuses like, "it's not the right time." Or, "I need to do more research." 
-                  But in 2015 I got tired of this endless procrastination, and finally took action. Six months later, my first book was published. 
-                  Look, we all have limited time on our hands. And we're getting closer to death every single minute. That shouldn't scare. 
-                  That should motivate you!Time is limited, that's why we must do the things we want: Today.In this "best of" collection, 
-                  I've handpicked 30 of my best articles that help you to overcome procrastination, improve your productivity, 
-                  and achieve all the things you always wanted. Plus, I've written an extensive introduction about my life and work philosophy. 
-                  And I've made many improvements and edits to the articles. So the content of this book is different from the articles on my site.
-                  In Do It Today, you'll learn:1.Why we procrastinate and how we can overcome it2.How to increase your productivity without being 
-                  stressful3.How to achieve more meaningful things in your life so you can enjoy it moreAre you ready to start reading this book? 
+                <p class="card-text">
+                  In Do It Today, you'll learn:1.Why we procrastinate and how we can overcome it 2.How to increase your productivity without being 
+                  stressful 3.How to achieve more meaningful things in your life so you can enjoy it moreAre you ready to start reading this book? 
                   If so: Do it today-not tomorrow.
                   </p>
               </div>
