Added Casino Royale as a Book Card

--- a/index.html
+++ b/index.html
@@ -956,7 +956,24 @@
             </div>
           </div>
         </div>
-        
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/61pKO8SwS4L.jpg" alt="" />
+            <div class="card-body">
+              <div>
+                <h5 class="card-title">Casino Royale</h5>
+                <p class="card-text">There's no better time to rediscover James Bond.Escape with the nation's favourite spy in the addictive first novel in Ian Fleming's classic series.Le Chiffre is a businessman with expensive tastes, and SMERSH's chief operative in France. But as his dissolute lifestyle threatens to ruin him, his only hope is to risk his paymasters' money at the card table.James Bond, the finest gambler in the service, has a deadly new mission: to outplay Le Chiffre and shatter his Soviet cell.
+                  .</p>
+              </div>
+              <a
+                href="https://github.com/amaan-p"
+                class="btn btn-outline-danger btn-sm"
+                >Contributed by - Amaan Patel</a>
+            </div>
+          </div>
+        </div>
+
         <div class="col-lg-4 mb-4">
           <div class="card">
             <img class="card-img-top" src="https://m.media-amazon.com/images/I/61ZPDQOjw-L.jpg" alt="Do It Today" />
