--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
       <div class="row">
         <div class="col-lg-4 mb-4">
-          <div class="card text-white bg-dark">
+          <div class="card text-white">
             <div id="one" class="card-body">
               <h5 class="card-title">
                 <i class="fab fa-linkedin"></i> LinkedIn
