Added Linux BIble

--- a/index.html
+++ b/index.html
@@ -977,7 +977,27 @@
             </div>
           </div>
         </div>
-        
+       <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img class="https://m.media-amazon.com/images/I/51Oe4q7uOiL._SX404_BO1,204,203,200_.jpg" alt="Linux Bible"  />
+          <div class="card-body">
+            <div>
+              <h5 class="card-title">Linux Bible</h5>
+              <p class="card-text">
+                The Linux Bible Is a handbook that will turn you from a Linux zero to a Linux hero in less than 800 pages.Consider 
+                this book as a really long winded tutorial where you discover the history of Linux, setting up your own desktop environment,
+                getting your hands dirty with the command line, learning about duties of a professional system/cloud engineer (even automation with Ansible) and the security 
+                practices that you have to consider if you want to be taken seriously as a hobbyist or an aspiring Linux Professional.
+              </p>
+            </div>
+            <a
+               href="https://github.com/sama-004"
+               class="btn btn-outline-danger btn-sm"
+               >Contributed by - Samanyu Roy</a
+              >
+             </div> 
+         </div>
+       </div>            
       
         <!--Ends here-->
       </div>
