--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
         </div>
        <div class="col-lg-4 mb-4">
         <div class="card">
-          <img class="https://m.media-amazon.com/images/I/51Oe4q7uOiL._SX404_BO1,204,203,200_.jpg" alt="Linux Bible"  />
+          <img class="card-img-top" src="https://m.media-amazon.com/images/I/51Oe4q7uOiL._SX404_BO1,204,203,200_.jpg" alt="Linux Bible"  />
           <div class="card-body">
             <div>
               <h5 class="card-title">Linux Bible</h5>
