--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <a class="navbar-brand navTitle" href="index.html">
-        <i class="fas fa-desktop mr-2"></i>
+        <img height="10%" width="20%" src="icons/book.png">
         BookCase</a
       >
       <button
