--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
           <div class="card-body">
             <div>
               <h5 class="card-title">BHAGAVAD GITA</h5>
-              <p class="card-text">The Bhagavad Gita, often referred to as the Gita, is a 700-verse Hindu scripture that is part of the epic Mahabharata, dated to the second half of the first millennium BCE and is typical of the Hindu synthesis. It is considered to be one of the holy scriptures for Hinduism.[</p>
+              <p class="card-text">The Bhagavad Gita, often referred to as the Gita, is a 700-verse Hindu scripture that is part of the epic Mahabharata, dated to the second half of the first millennium BCE and is typical of the Hindu synthesis. It is considered to be one of the holy scriptures for Hinduism.</p>
             </div>
             <a href="https://github.com/pallab17" class="btn btn-outline-danger btn-sm">Contributed by -
               Pallab Banerjee</a>
