--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
           </div>
         </div>
 
-   <div class="card">
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
             <img alt="Alchemist" class="card-img-top" src="https://m.media-amazon.com/images/I/71aFt4+OTOL.jpg">
             <div class="card-body">
               <div>
