add my pr sayak

--- a/index.html
+++ b/index.html
@@ -1086,6 +1086,19 @@
           </div>
         </div>
       </div> 
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img class="card-img-top" src="https://m.media-amazon.com/images/I/81GRNatj7pL.jpg" alt="" />
+          <div class="card-body">
+            <div>
+              <h5 class="card-title">SHERLOCK HOLMES</h5>
+              <p class="card-text">Sherlock Holmes is a fictional detective created by British author Sir Arthur Conan Doyle. Referring to himself as a "consulting detective" in the stories, Holmes is known for his proficiency with ...</p>
+            </div>
+            <a href="https://github.com/msayak96" class="btn btn-outline-danger btn-sm">Contributed by -
+              SAYAK MONDAL</a>
+          </div>
+        </div>
+      </div> 
       
         <!--Ends here-->
       </div>
