solved issues in website

--- a/index.html
+++ b/index.html
@@ -649,6 +649,20 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/71sH3vxziLL.jpg" alt="" />
+            <div class="card-body">
+              <div>
+                <h5 class="card-title">Harry Potter and the Deathly Hallows</h5>
+                <p class="card-text">Harry Potter and the Deathly Hallows is a fantasy novel written by British author J. K. Rowling and the seventh and final novel of the main Harry Potter series. It was released on 21 July 2007 in the United Kingdom by Bloomsbury Publishing, in the United States by Scholastic, and in Canada by Raincoast Books. The novel chronicles the events directly following Harry Potter and the Half-Blood Prince (2005) and the final confrontation between the wizards Harry Potter and Lord Voldemort.</p>
+              </div>
+              <br>
+              <a href="https://github.com/kishanlalchoudhary" class="btn btn-outline-danger btn-sm">Contributed by -
+                kishanlalchoudhary</a>
+            </div>
+          </div>
+        </div> 
+        <div class="col-lg-4 mb-4">
+          <div class="card">
             <img class="card-img-top" src="https://m.media-amazon.com/images/I/51zCkUXeUML.jpg" alt="" />
             <div class="card-body">
               <h5 class="card-title">The Power of your Subconscious Mind</h5>
