Theme Changer Cool Toggle Button Added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script defer src="./js/typewriterEffect.js"></script>
   <script defer src="./js/bookSearch.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/ee27ae787a.js" crossorigin="anonymous"></script>
   <title>BookCase</title>
 </head>
 
@@ -30,7 +31,10 @@
     </a>
     <div class="color-switcher">
       <input type="checkbox" id="color-switch" />
-      <span class="color-switch-span"></span>
+      <span class="color-switch-span">
+        <i class="fa-solid fa-moon"></i>
+        <i class="fa-solid fa-sun"></i>
+      </span>
     </div>
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
       class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"><span
