--- a/about.html
+++ b/about.html
@@ -1,139 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="icons/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
-    />
-    <link rel="stylesheet" href="about.css" />
-    <title>About</title>
-  </head>
-  <body>
-    <div id="loading">
-      <img
-        id="loading-image"
-        width="100%"
-        height="100%"
-        src="https://cdn.dribbble.com/users/149180/screenshots/3208433/media/69be039cf606f6fe7ad8d1975306814e.gif"
-        alt="Loading..."
-      />
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="icons/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" />
+  <script src="https://kit.fontawesome.com/ee27ae787a.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="about.css" />
+  <title>About</title>
+</head>
+
+<body>
+  <div id="loading">
+    <img id="loading-image" width="100%" height="100%"
+      src="https://cdn.dribbble.com/users/149180/screenshots/3208433/media/69be039cf606f6fe7ad8d1975306814e.gif"
+      alt="Loading..." />
+  </div>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <a class="navbar-brand navTitle" href="index.html">
+      <img height="10%" width="20%" src="icons/book.png">
+      BookCase</a>
+    <div class="color-switcher">
+      <input type="checkbox" id="color-switch" />
+      <span class="color-switch-span">
+        <i class="fa-solid fa-moon"></i>
+        <i class="fa-solid fa-sun"></i>
+      </span>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <a class="navbar-brand navTitle" href="index.html">
-        <img height="10%" width="20%" src="icons/book.png">
-        BookCase</a
-      >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item itemNav">
-            <a class="nav-link" href="index.html#header">Home</a>
-          </li>
-          <li class="nav-item itemNav">
-            <a class="nav-link" href="index.html#gallery-title">Books</a>
-          </li>
-          <li class="nav-item itemNav">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container">
-      <h1 class="about-title">
-        <b>This project is developed by Vishal Kumar</b>
-      </h1>
-      <div id="para">
-        <p>Hey! I'm a third year Computer Science Engineering student.</p>
-        <p>
-          I created this project as a starter repository for Hacktoberfest 2022
-          in order to help first-time participants in learning how to make their
-          first pull request.
-        </p>
-      </div>
-      <div class="container"></div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item itemNav">
+          <a class="nav-link" href="index.html#header">Home</a>
+        </li>
+        <li class="nav-item itemNav">
+          <a class="nav-link" href="index.html#gallery-title">Books</a>
+        </li>
+        <li class="nav-item itemNav">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <h1 class="about-title">
+      <b>This project is developed by Vishal Kumar</b>
+    </h1>
+    <div id="para">
+      <p class="descrip">Hey! I'm a third year Computer Science Engineering student.</p>
+      <p class="descrip">
+        I created this project as a starter repository for Hacktoberfest 2022
+        in order to help first-time participants in learning how to make their
+        first pull request.
+      </p>
+    </div>
+    <div class="container"></div>
 
-      <br />
+    <br />
 
-      <div class="row">
-        <div class="col-lg-4 mb-4">
-          <div class="card text-white">
-            <div id="one" class="card-body">
-              <h5 class="card-title">
-                <i class="fab fa-linkedin"></i> LinkedIn
-              </h5>
-              <p class="card-text">Let's connect!</p>
-              <a
-                href="https://www.linkedin.com/in/vishaaal/"
-                class="btn btn-outline-light btn-sm"
-                >LinkedIn</a
-              >
-            </div>
+    <div class="row">
+      <div class="col-lg-4 mb-4">
+        <div class="card text-white">
+          <div id="one" class="card-body">
+            <h5 class="card-title">
+              <i class="fab fa-linkedin"></i> LinkedIn
+            </h5>
+            <p class="card-text">Let's connect!</p>
+            <a href="https://www.linkedin.com/in/vishaaal/" class="btn btn-outline-light btn-sm">LinkedIn</a>
           </div>
         </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card text-white">
-            <div id="two" class="card-body">
-              <h5 class="card-title"><i class="fab fa-github"></i> GitHub</h5>
-              <p class="card-text">Check out my GitHub profile!</p>
-              <a
-                href="https://github.com/vishaaal"
-                class="btn btn-outline-light btn-sm"
-                >GitHub</a
-              >
-            </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card text-white">
+          <div id="two" class="card-body">
+            <h5 class="card-title"><i class="fab fa-github"></i> GitHub</h5>
+            <p class="card-text">Check out my GitHub profile!</p>
+            <a href="https://github.com/vishaaal" class="btn btn-outline-light btn-sm">GitHub</a>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/index.js"></script>
-    <script>
-      $(".navbar-nav>li>a").on("click", function () {
-        $(".navbar-collapse").collapse("hide");
-      });
-      $(window).on("load", function () {
-        $("#loading").hide();
-      });
-    </script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <script src="/index.js"></script>
+  <script>
+    $(".navbar-nav>li>a").on("click", function () {
+      $(".navbar-collapse").collapse("hide");
+    });
+    $(window).on("load", function () {
+      $("#loading").hide();
+    });
+  </script>
+  <script src="about.js"></script>
+</body>
+
 </html>
