--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
   </section>
   <footer>
     <h1></h1>
-    <a href="#header" class="back-to-top arrow"><i class="fas fa-angle-up fa-4x backToTop"></i></a>
+    <a href="#header" class="back-to-top arrow"><i class="fas fa-angle-up backToTop"></i></a>
   </footer>
   <foot>
     <p class="footer"> 
