--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,20 @@
           </div>
         </div>
       </div> 
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img class="card-img-top" src="https://i.pinimg.com/originals/74/7f/c2/747fc2fcdd30383b7e7f17cce3d47934.png" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">How to stop worring and start living</h5>
+            <p class="card-text">The book's goal is to lead the reader to a more enjoyable and fulfilling life, helping them to become more aware of, not only themselves, but others around them. Carnegie tries to address the everyday nuances of living, in order to get the reader to focus on the more important aspects of life. It is now a world-famous, self-help book amongst many people. </p>
+            <a
+              href="https://github.com/AmanTiwari19"
+              class="btn btn-outline-danger btn-sm"
+              >Contributed by - Aman Tiwari</a
+            >
+          </div>
+        </div>
+      </div>
       
         <!--Ends here-->
       </div>
