[fix] button go to top

--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
   </section>
   <footer>
     <h1></h1>
-    <a href="#header" class="back-to-top arrow"><i class="fas fa-angle-up backToTop"></i></a>
+    <a href="#header" class="back-to-top arrow"><i class="fas fa-angle-up backToTop" style="padding-left:10px ; padding-top:8px" ></i></a>
   </footer>
   <foot>
     <p class="footer"> 
