--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <li class="nav-item itemNav">
           <a class="nav-link" href="about.html">About</a>
         </li>
+        <li class="nav-item itemNav">
+          <a class="nav-link" href = "mailto:officialvk02@gmail.com">Contact Us</a>
+        </li>
       </ul>
     </div>
   </nav><!-- Header Section -->
